# md_reader

./: .gitignore  LESSONS.md  README.md  build.ps1  bundle.js  capacitor.config.json  debug-html.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  mobile-build.yml
android/: build.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
md_reader-latest/md_reader-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  capacitor.config.json  package-lock.json
md_reader-latest/md_reader-main/.github/: PULL_REQUEST_TEMPLATE.md
md_reader-latest/md_reader-main/.github/ISSUE_TEMPLATE/: bug_report.md
md_reader-latest/md_reader-main/.github/workflows/: build.yml
md_reader-latest/md_reader-main/public/: file-api.js  index.html  sw.js
md_reader-latest/md_reader-main/src-tauri/: tauri.conf.json
public/: !卸载.bat  !绿化.bat  app.bundle.js  file-api.js  index.html  manifest.json  sw.js  test-features.md
public/app/: ai.js  app.js  db.js  draw.js  editor.js  encoding.js  export.js  md-parser.js  renderers.js  search.js  session.js  state.js  ui.js
public/lib/: html-docx.min.js  katex-export.css  katex-jsconst.txt  pptxviewjs.min.js
public/test-files/: test.docx  test.pptx  章宸铭.docx
skills/: tauri-capacitor-build.md
src-tauri/: Cargo.toml  build.rs  installer.nsh  tauri.conf.json  tauri_lock_entry.txt
src-tauri/src/: lib.rs
test-files/: test.docx  test.pptx
(+6 files in other folders)
